--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -17,7 +17,7 @@ spring:
         registration:
           google:
             client-id: 322232632137-sim9l0tcsstt4id4bt1ee4vg9knkf1ek.apps.googleusercontent.com
-            client-secret: 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
+            client
             scope:
               - https://www.googleapis.com/auth/userinfo.email
               - https://www.googleapis.com/auth/userinfo.profile
